--- a/index.html
+++ b/index.html
@@ -26,14 +26,19 @@
     <main>
         <section id="hero">
             <h1>Nehan Tanwar</h1>
-            <p>AI Intern @Volare Tech. || Ex-AI Intern @Orbo Pvt Ltd || Indian Institute of Information Technology, Nagpur 2025</p>
-        </section>
-
+<div class="info-line">
+    <span>AI Intern @Volare Tech.</span>
+    <span class="separator">|</span>
+    <span>Ex-AI Intern @Orbo Pvt. Ltd.</span>
+    <span class="separator">|</span>
+    <span>Indian Institute of Information Technology, Nagpur 2025</span>
+</div>
         <section id="about">
             <h2>About Me</h2>
-            <p>I am an Artificial Intelligence enthusiast, passionately learning about AI and machine learning since 2020. My journey has evolved with the ongoing innovations in the field. Since 2022, I have been building projects focused on Large Language Models (LLMs), utilizing Retrieval-Augmented Generation (RAG), and have experience fine-tuning existing models on custom datasets. In addition to my work with LLMs, I have practical experience in computer vision, particularly in object detection and image generation. One of my key projects involved fine-tuning the YOLOv7 model on a medical dataset to accurately detect arteries and veins, for which I created boundary boxes using the LabelMG tool.
-
-My interest in AI expanded to model deployment, and I’ve deployed several models using AWS services like S3, EC2, Secrets Manager, and SageMaker. My hands-on experience with real-world datasets has been enriched through working with multiple startups, where I gained exposure to practical challenges and collaborative work environments. I'm eager to continue learning and contributing to the advancement of AI technologies.</p>
+            <p>I am an Artificial Intelligence enthusiast, passionately learning about AI and machine learning since 2020. My journey has evolved with the ongoing innovations in the field.</p>
+            <p>Since 2022, I have been building projects focused on Large Language Models (LLMs), utilizing Retrieval-Augmented Generation (RAG), and have experience fine-tuning existing models on custom datasets. </p>
+            <p>In addition to my work with LLMs, I have practical experience in computer vision, particularly in object detection and image generation. One of my key projects involved fine-tuning the YOLOv7 model on a medical dataset to accurately detect arteries and veins, for which I created boundary boxes using the LabelMG tool.</p>
+            <p>My interest in AI expanded to model deployment, and I’ve deployed several models using AWS services like S3, EC2, Secrets Manager, and SageMaker. My hands-on experience with real-world datasets has been enriched through working with multiple startups, where I gained exposure to practical challenges and collaborative work environments. I'm eager to continue learning and contributing to the advancement of AI technologies.</p>
         </section>
     </main>
 
