mobile(2 rows 3 columns)

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
         <section id="hero">
             <h1>Nehan Tanwar</h1>
             <div class="info-line">
-                <span>AI Intern @Volare Tech. <span class="separator">|</span> Ex-AI Intern @Orbo Pvt. Ltd.</span>
-                <span class="institute">Indian Institute of Information Technology, Nagpur 2025</span>
+                <p> <span>AI Intern @Volare Tech. <span class="separator">|</span> Ex-AI Intern @Orbo Pvt. Ltd.</span></p>
+                <span class="institute">Indian Institute of Information Technology, Nagpur</span>
             </div>
         </section>
 
