--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <section id="hero">
             <h1>Nehan Tanwar</h1>
             <div class="info-line">
-                <p> <span>AI Intern @Volare Tech. <span class="separator">|</span> Ex-AI Intern @Orbo Pvt. Ltd.</span></p>
+                <p> <span>AI Intern @Volare Tech. <span class="separator">|</span> Ex-AI Intern @Orbo </span></p>
                 <span class="institute">Indian Institute of Information Technology, Nagpur</span>
             </div>
         </section>
