--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,7 @@
     <title>Nehan Tanwar - Contact</title>
     <link rel="stylesheet" href="styles.css">
     <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
     <div id="particles-js"></div>
@@ -26,10 +27,12 @@
     <main>
         <section class="page-content">
             <h2>Contact Me</h2>
-            <p>Phone: 9119362169</p>
-            <p>Email: <a href="nehantanwar012@gmail.com">nehantanwar012@gmail.com</a></p>
-            <p>GitHub: <a href="https://github.com/Nehan757" target="_blank">Nehan757</a></p>
-            <p>LinkedIn: <a href="https://www.linkedin.com/in/nehan-tanwar-242984201/" target="_blank">Nehan Tanwar</a></p>
+            <p>Phone: +91 9119362169</p>
+            <div class="contact-icons">
+                <a href="mailto:nehantanwar012@gmail.com" title="Email"><i class="fas fa-envelope"></i></a>
+                <a href="https://github.com/Nehan757" target="_blank" title="GitHub"><i class="fab fa-github"></i></a>
+                <a href="https://www.linkedin.com/in/nehan-tanwar-242984201/" target="_blank" title="LinkedIn"><i class="fab fa-linkedin"></i></a>
+            </div>
         </section>
     </main>
 
