--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
             <p>I am an Artificial Intelligence enthusiast, passionately learning about AI and machine learning since 2020. My journey has evolved with the ongoing innovations in the field.</p>
             <p>Since 2022, I have been building projects focused on Large Language Models (LLMs), utilizing Retrieval-Augmented Generation (RAG), and have experience fine-tuning existing models on custom datasets.</p>
             <p>In addition to my work with LLMs, I have practical experience in computer vision, particularly in object detection and image generation. One of my key projects involved fine-tuning the YOLOv7 model on a medical dataset to accurately detect arteries and veins, for which I created boundary boxes using the LabelIMG tool.</p>
-            <p>My interest in AI expanded to model deployment, and I've deployed several models using AWS services like S3, EC2, Secrets Manager, and SageMaker. My hands-on experience with real-world datasets has been enriched through working with multiple startups, where I gained exposure to practical challenges and collaborative work environments. I'm eager to continue learning and contributing to the advancement of AI technologies.</p>
+            <p>My interest in AI expanded to model deployment, and I've deployed several models using AWS services like S3, EC2, Secrets Manager, and SageMaker.</p>
+            <p>My hands-on experience with real-world datasets has been enriched through working with multiple startups, where I gained exposure to practical challenges and collaborative work environments. I'm eager to continue learning and contributing to the advancement of AI technologies.</p>
         </section>
     </main>
 
