connecting backend to the frontend

--- a/projects.html
+++ b/projects.html
@@ -37,17 +37,18 @@
         </ul>
         <a href="#" class="live-test-btn">Live Test</a>
     </div>
-    <div class="project-item">
-        <h3><a href="https://github.com/Nehan757/ATIC.git" target="_blank">Subtheme Sentiment Analysis</a></h3>
-        <p><em>Python, Spacy, NLTK, Text Preprocessing</em></p>
-        <ul>
-            <li>Developed a robust sentiment analysis pipeline to extract subthemes from customer reviews and determine their associated sentiments.</li>
-            <li>Executed extensive text preprocessing steps including tokenization, stopword removal, and lemmatization to standardize and prepare text data for accurate sentiment and subtheme analysis.</li>
-            <li>Created an algorithm to handle pronoun resolution within the context of subtheme sentiments, ensuring accurate sentiment assignment even when pronouns are used in place of specific subthemes.</li>
-            <li>Engineered a system to output unique subtheme sentiments, effectively removing duplicates and providing clear, actionable insights for each subtheme mentioned in the reviews.</li>
-        </ul>
-        <a href="#" class="live-test-btn">Live Test</a>
-    </div>
+<div class="project-item">
+    <h3><a href="https://github.com/Nehan757/FileGenie" target="_blank">FileGenie: Document Q&A System</a></h3>
+    <p><em>Python, Flask, React, LangChain, FAISS, Groq, Google Generative AI</em></p>
+    <ul>
+        <li>Engineered a powerful document Q&A system that allows users to upload PDF files and ask questions about their content, leveraging advanced language models for accurate responses.</li>
+        <li>Implemented a robust backend using Flask, integrating LangChain for efficient document processing and FAISS for high-performance vector similarity search.</li>
+        <li>Developed a user-friendly frontend with React, featuring an intuitive interface for file uploads and question submissions, enhancing the overall user experience.</li>
+        <li>Utilized Groq and Google Generative AI to process natural language queries and generate context-aware responses, providing users with precise information extracted from their documents.</li>
+        <li>Deployed the application on Render, ensuring scalability and accessibility for users to interact with their documents anytime, anywhere.</li>
+    </ul>
+    <a href="https://filegenie-1.onrender.com/" class="live-test-btn" target="_blank">Live Test</a>
+</div>
 </section>
     </main>
 
