connecting backend to the frontend

--- a/projects.html
+++ b/projects.html
@@ -44,7 +44,7 @@
         <li>Engineered a powerful document Q&A system that allows users to upload PDF files and ask questions about their content, leveraging advanced language models for accurate responses.</li>
         <li>Implemented a robust backend using Flask, integrating LangChain for efficient document processing and FAISS for high-performance vector similarity search.</li>
         <li>Developed a user-friendly frontend with React, featuring an intuitive interface for file uploads and question submissions, enhancing the overall user experience.</li>
-        <li>Utilized Groq and Google Generativet AI to process natural language queries and generate context-aware responses, providing users with precise information extracted from their documents.</li>
+        <li>Utilized Groq and Google Generative AI to process natural language queries and generate context-aware responses, providing users with precise information extracted from their documents.</li>
         <li>Deployed the application on Render, ensuring scalability and accessibility for users to interact with their documents anytime, anywhere.</li>
     </ul>
     <a href="https://filegenie-1.onrender.com/" class="live-test-btn" target="_blank">Live Test</a>
