--- a/projects.html
+++ b/projects.html
@@ -26,26 +26,25 @@
     <main>
         <section class="page-content">
     <h2>Projects</h2>
-    <div class="project-item">
-        <h3><a href="https://github.com/Nehan757/Sentiment_Analysis.git" target="_blank">Legal Document Simplification</a></h3>
-        <p><em>Python, Langchain, LLM, GPT-3 API, Streamlit</em></p>
-        <ul>
-            <li>Integrated OpenAI's GPT-3 to simplify legal documents, automating the generation of plain language explanations.</li>
-            <li>Utilized Langchain for document processing tasks, such as loading PDF files, splitting documents into chunks, and creating embeddings using FAISS.</li>
-            <li>Employed the Constitution of India as the dataset for training and testing the model.</li>
-            <li>Planning to utilize MLOps (CI/CD), including tools like Kubeflow and techniques like automated model deployment, to enhance the model's functionality and user-friendliness in the future.</li>
-        </ul>
-        <a href="#" class="live-test-btn">Live Test</a>
-    </div>
 <div class="project-item">
     <h3><a href="https://github.com/Nehan757/FileGenie" target="_blank">FileGenie: Document Q&A System</a></h3>
     <p><em>Python, Flask, React, LangChain, FAISS, Groq, Google Generative AI</em></p>
     <ul>
-        <li>Engineered a powerful document Q&A system that allows users to upload PDF files and ask questions about their content, leveraging advanced language models for accurate responses.</li>
-        <li>Implemented a robust backend using Flask, integrating LangChain for efficient document processing and FAISS for high-performance vector similarity search.</li>
-        <li>Developed a user-friendly frontend with React, featuring an intuitive interface for file uploads and question submissions, enhancing the overall user experience.</li>
-        <li>Utilized Groq and Google Generative AI to process natural language queries and generate context-aware responses, providing users with precise information extracted from their documents.</li>
-        <li>Deployed the application on Render, ensuring scalability and accessibility for users to interact with their documents anytime, anywhere.</li>
+        <li>Developed a document Q&A system allowing PDF uploads and content querying, leveraging advanced language models for accurate responses.</li>
+<li>Built a Flask backend with LangChain for document processing and FAISS for vector search, utilizing Amazon S3 for secure storage of uploaded files and embeddings.</li>
+<li>Created a React frontend for intuitive user interaction, integrating Groq and Google Generative AI to process queries and generate context-aware responses.</li>
+<li>Deployed on Render with S3 integration, ensuring scalable and secure access to the application and stored documents anytime, anywhere.</li>
+    </ul>
+    <a href="https://filegenie-1.onrender.com/" class="live-test-btn" target="_blank">Live Test</a>
+</div>
+            <div class="project-item">
+    <h3><a href="https://github.com/Nehan757/Product-Image-Generator" target="_blank">Product Image Generator for Advertisement</a></h3>
+    <p><em>Python, Stable-Diffusion, Hugging Face, OpenCV, PyTorch</em></p>
+    <ul>
+        <li>Developed a novel machine learning model utilizing Hugging Face, OpenCV, Stable Diffusion, and PyTorch to enhance product images for advertisement, boosting visual appeal and engagement.</li>
+        <li>Engineered a solution that takes a product image as input and, guided by user-provided prompts, generates compelling advertisement-ready visuals, streamlining marketing content creation.</li>
+        <li>Applied advanced computer vision techniques to seamlessly remove and replace backgrounds, ensuring the final image aligns with the user's creative vision and brand identity.</li>
+        <li>Leveraged Stable Diffusion to enhance image quality and realism, achieving visually stunning results suitable for diverse advertising campaigns.</li>
     </ul>
     <a href="https://filegenie-1.onrender.com/" class="live-test-btn" target="_blank">Live Test</a>
 </div>
