connecting backend to the frontend

--- a/projects.html
+++ b/projects.html
@@ -38,7 +38,7 @@
     <a href="https://filegenie-1.onrender.com/" class="live-test-btn" target="_blank">Live Test</a>
 </div>
             <div class="project-item">
-    <h3><a href="https://github.com/Nehan757/Product-Image-Generator" target="_blank">Product Image Generator for Advertisement</a></h3>
+    <h3><a href="https://github.com/Nehan757/Product-Image-Generator" target="_blank">Product Advertisement Creator</a></h3>
     <p><em>Python, Stable-Diffusion, Hugging Face, OpenCV, PyTorch</em></p>
     <ul>
         <li>Developed a novel machine learning model utilizing Hugging Face, OpenCV, Stable Diffusion, and PyTorch to enhance product images for advertisement, boosting visual appeal and engagement.</li>
