Updated app url and Fixed Text size of index page

--- a/skills.html
+++ b/skills.html
@@ -27,10 +27,10 @@
         <section class="page-content">
             <h2>Technical Skills</h2>
             <ul>
-                <li><strong>Languages:</strong> C/C++, Python, SQL, Linux, Bash, Java</li>
-                <li><strong>Machine Learning:</strong> Tensorflow, Hugging Face, NLTK, TextBlob, Spacy, Pytorch, NLP, LLM, LangChain, Llama2</li>
-                <li><strong>MLOps:</strong> CI/CD, Tox, Pytest, Packaging, Kubernetes, Jenkins, MLFlow, Docker, Streamlit, Whylogs, AWS</li>
-                <li><strong>Data Structures and Algorithms:</strong> Dynamic programming, BFS/DFS, Recursion, Hash-Maps, Sliding Window, etc.</li>
+                <li><strong>Languages:</strong> Python, C++, SQL, Linux, Javascript</li>
+                <li><strong>Machine Learning:</strong> Tensorflow, Pytorch, Scikit-learn, LLM, RAG, Fine-tuning, Langchain, OpenCV, CNN, YOLOv7 and Diffusion.</li>
+                <li><strong>DevOps:</strong> Heroku, Vercel, Streamlit, Docker, Git, CI-CD, Jenkins, AWS services like S3, EC2, Sagemaker and Secrets Manager.</li>
+                <li><strong>Data Structures and Algorithms:</strong> Dynamic programming, Graphs, BFS/DFS, Recursion, Hash-Maps, Sliding Window, etc.</li>
             </ul>
         </section>
     </main>
